plugins {
    id 'java-library'
    id "com.github.johnrengelman.shadow" version "6.1.0"
}

group 'pl.sexozix'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(16))
    }
}

repositories {
    mavenCentral()

    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
        content {
            includeGroup 'org.spigotmc'
        }
    }

    maven {
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
        content {
            includeGroup 'me.clip'
        }
    }

    maven {
        url 'https://storehouse.okaeri.eu/repository/maven-public/'
        content {
            includeGroup 'eu.okaeri'
        }
    }

    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/repositories/snapshots/'
    }

    maven {
        url "https://repo.dmulloy2.net/repository/public/"
        content {
            includeGroup 'com.comphenix.protocol'
        }
    }

    maven {
        url = uri("https://maven.pkg.github.com/playcastle-ru/database-sraka")
        credentials {
            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
            password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
        }
        content {
            includeGroup 'pl.memexurer'
        }
    }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    implementation 'pl.memexurer:database-sraka:2.3.3-SNAPSHOT'

    compileOnly 'me.clip:placeholderapi:2.10.1'

    implementation 'eu.okaeri:okaeri-configs-yaml-bukkit:2.7.32'

    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'

    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4+"
}

shadowJar {
    relocate 'eu.okaeri', 'pl.sexozix.cashblockminers.okaeri'
    relocate 'net.kyori', 'pl.sexozix.cashblockminers.kyori'
    exclude "database.properties"
}

// do testowania: w runnerze intellij dodajesz -DpluginsDir=/home/memexurer/Desktop/spigot/plugins
// task ma odpalac: shadowJar copyJar
// wiesz ocb
task copyJar(type: Copy) {
    from().from(tasks.shadowJar.archiveFile)
    into System.properties.getProperty("pluginsDir")
}

test {
    useJUnitPlatform()
}